--- a/public/assets/Style/style.css
+++ b/public/assets/Style/style.css
@@ -1156,60 +1156,46 @@ ul#menu{
   Blog Section
 -----------------------*/
 
-.blog-section.blog-page {
-	padding-top: 0;
-	padding-bottom: 88px;
-}
-.blog-item {
-	height: 450px;
-	position: relative;
-	margin-bottom: 30px;
-	border-radius: 5px;
-}
-.blog-item.small-size {
-	height: 400px;
-}
-.blog-item .bi-text {
-	position: absolute;
-	left: 0;
-	bottom: 25px;
-	width: 100%;
-	padding-left: 30px;
-	padding-right: 30px;
-}
-.blog-item .bi-text .b-tag {
-	display: inline-block;
-	color: #ffffff;
-	font-size: 12px;
+.section-100 {
+	padding: 50px 0;
+  }
+  
+  .btn-blog {
+	padding: 7px 25px 7px 25px;
+	color:#fff;
+	background-color: #6C584C;
 	text-transform: uppercase;
-	letter-spacing: 1px;
-	background: #dfa974;
-	padding: 3px 10px;
-	border-radius: 2px;
-}
-.blog-item .bi-text h4 {
-	margin-top: 18px;
-	margin-bottom: 18px;
-}
-.blog-item .bi-text h4 a {
-	color: #ffffff;
-}
-.blog-item .bi-text .b-time {
-	font-size: 12px;
-	color: #ffffff;
-	text-transform: uppercase;
-	letter-spacing: 3px;
-}
-.load-more {
-	text-align: center;
-	padding-top: 30px;
-}
-.load-more .primary-btn {
-	color: #19191a;
-}
+	-webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16);
+			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16);
+  }
 
-.set-bg {
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: top center;
-}
+  .btn-blog:hover {
+	padding: 7px 25px 7px 25px;
+	color:#fff;
+	background-color: #000;
+	text-transform: uppercase;
+	-webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16);
+			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16);
+  }
+  
+  .blog-card {
+	background-color: rgba(231, 231, 231, 0.5);
+	-webkit-box-shadow: 0 5px 30px -3px rgba(0, 0, 0, 0.16);
+			box-shadow: 0 5px 30px -3px rgba(0, 0, 0, 0.16);
+	margin-bottom: 60px;
+  }
+  
+  .blog-card .blog-thumbnail {
+	width: 100%;
+	height: 220px;
+	-o-object-fit: cover;
+	   object-fit: cover;
+  }
+  
+  .blog-card .blog-container {
+	padding: 15px;
+  }
+
+  .blog-container .post-title{
+	font-size: 40px;
+  }
